# adc-interpolator

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: adc_interpolator.rs  interpolate.rs  lib.rs
