[package]
name = "adc-interpolator"
version = "0.2.0"
authors = ["Peter Stuart <peter@peterstuart.org>"]
description = "An interpolator for analog-to-digital converters"
readme = "README.md"
repository = "https://github.com/peterstuart/adc-interpolator/"
keywords = ["embedded-hal", "adc", "interpolation"]
categories = ["embedded"]
license = "MIT"
edition = "2021"

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
nb = "1.0.0"

[dev-dependencies]
embedded-hal-mock = "0.8.0"
